# kynxShare

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.bat
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/src/: App.tsx  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs
crates/kynx-capture/: Cargo.toml
crates/kynx-capture/src/: dxgi.rs  lib.rs  monitor.rs  stub.rs  types.rs
crates/kynx-compositor/: Cargo.toml
crates/kynx-compositor/src/: compose.rs  layout.rs  lib.rs  mouse_follow.rs
crates/kynx-core/: Cargo.toml
crates/kynx-core/src/: config.rs  engine.rs  lib.rs
crates/kynx-output/: Cargo.toml
crates/kynx-output/src/: lib.rs  vdd.rs
crates/kynx-output/src/share_window/: mod.rs  win.rs
crates/kynx-output/src/virtual_cam/: mod.rs  win.rs
docs/: architecture.md  discord.md  virtual-camera.md
installer/: README.md
