[package]
name = "kynx-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Config, orchestration, and shared types for kynxShare"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
directories.workspace = true
image.workspace = true
kynx-capture = { path = "../kynx-capture" }
kynx-compositor = { path = "../kynx-compositor" }
kynx-output = { path = "../kynx-output" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
] }
