[package]
name = "kynx-output"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Share window, virtual camera, and VDD bridge for kynxShare"

[dependencies]
anyhow.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
parking_lot.workspace = true
kynx-compositor = { path = "../kynx-compositor" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_UI_WindowsAndMessaging",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_Security",
  "Win32_System_Threading",
] }
