[package]
name = "kynxshare"
version.workspace = true
description = "kynxShare desktop app"
authors.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "kynxshare_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
parking_lot.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
kynx-core = { path = "../../../crates/kynx-core" }
kynx-capture = { path = "../../../crates/kynx-capture" }
kynx-compositor = { path = "../../../crates/kynx-compositor" }
kynx-output = { path = "../../../crates/kynx-output" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
